# image-figma

./: .env.example  .gitignore  .repomixignore  AGENTS.md  CLAUDE.md  GEMINI.md  PROGRESS.md  README.md  go.work  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix.config.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
archive/legacy-code/backend/: pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: asset_slice.py  component_annotation.py  component_structure.py  config.py  content_chrome_classification.py  database.py  dsl_factory.py  dsl_patch.py  evidence_grounded_dsl_materialization.py  hierarchy_materialization.py  hierarchy_readiness.py  icon_business_candidate.py  icon_candidate.py  icon_coverage.py  icon_gap_candidate.py  icon_placement_plan.py  icon_visible_fallback.py  image_internal_overlay.py  image_internal_overlay_promotion.py  image_internal_overlay_text_recognition.py  json_tools.py  layer_separation.py  m29_direct_replay.py  m29_materialization_utils.py  m29_plan_materializer.py  m29_replay_plan.py  m30_upload_pipeline.py  main.py  member_boundary_quality_audit.py  mixed_symbol_text_conflict_audit.py  models.py  ocr.py  ocr_baidu.py  onnx_box_proposer.py  perception_benchmark.py  png_tools.py  pre_ocr_symbol_lineage_audit.py  reconstruction_ui_tree.py  region_relation_graph_report.py  residual_mixed_boundary_review.py  (+19 more)
backend/app/auto_layout_permission_report/: normalization.py  validation.py
backend/app/b_stage_quality_report/: pipeline.py  quality.py  report.py  summary.py  validation.py
backend/app/design_token_report/: pipeline.py  spacing.py
backend/app/dsl_visual_comparison/: __init__.py  pipeline.py  render.py
backend/app/hierarchy_candidate_report/: candidates.py  geometry.py  pipeline.py  types.py
backend/app/image_math/: __init__.py  alpha.py  background.py  components.py  debug.py  morphology.py  perception.py  scale.py
backend/app/internal_source_promotion/: pipeline.py
backend/app/layout_energy_report/: __init__.py  geometry.py  normalization.py  pipeline.py  subjects.py
backend/app/m29_bridge_fate_trace/: pipeline.py  types.py  validation.py
backend/app/m29_evidence_contract/: pipeline.py  scoring.py  types.py  validation.py
backend/app/m29_perception_fate_trace/: __init__.py  pipeline.py  report.py  types.py  validation.py
backend/app/m29_replay_plan/: __init__.py  budget.py  cleanup.py  decisions.py  lookups.py  normalization.py  overlap.py  pipeline.py  report.py  utils.py  validation.py
backend/app/media_internal_decomposition/: __init__.py  candidates.py  normalization.py  pipeline.py  report.py  types.py  validation.py
backend/app/ownership_conservation/: __init__.py  claims.py  conflicts.py  geometry.py  normalization.py  pipeline.py  relations.py  report.py  (+1 more)
backend/scripts/: probe_onnx_model.py  run_m26_perception_smoke.py  run_m27_sam_visual_smoke.py  run_m28_single_visual_extraction.py  run_m29_0_2_text_masked_media_audit.py  run_m29_0_3_2_residual_mixed_boundary_review.py  run_m29_0_3_visual_evidence_normalization.py  run_m29_0_4_visual_object_candidate_audit.py  run_m29_0_6_member_boundary_quality_audit.py  run_m29_0_7_text_visual_ownership_gate.py  run_m29_1_1_pre_ocr_symbol_lineage_audit.py  run_m29_1_3_mixed_symbol_text_conflict_audit.py  run_m29_direct_replay_experiment.py  run_m29_visual_primitive_graph.py  run_m30_evidence_grounded_dsl_materialization.py  run_m31_reconstruction_ui_tree.py  run_upload_preview_batch_validation.py
backend/tests/: conftest.py  test_asset_slice.py  test_assets.py  test_b_stage_quality_report.py  test_baidu_ocr.py  test_component_annotation.py  test_component_structure.py  test_config_env.py  test_content_chrome_classification.py  test_dsl_visual_comparison.py  test_evidence_grounded_dsl_materialization.py  test_hierarchy_candidate_report.py  test_hierarchy_materialization.py  test_icon_business_candidate.py  test_icon_candidate.py  test_icon_coverage.py  test_icon_gap_candidate.py  test_icon_placement_plan.py  test_icon_visible_fallback.py  test_image_internal_overlay.py  test_image_internal_overlay_promotion.py  test_image_internal_overlay_text_recognition.py  test_image_math_arrays.py  test_image_math_import_boundaries.py  test_internal_source_promotion.py  test_layer_separation.py  test_m29_bridge_fate_trace.py  test_m29_direct_replay.py  test_m29_evidence_contract.py  test_m29_perception_fate_trace.py  test_m29_plan_materializer.py  test_m29_replay_plan.py  test_m30_upload_pipeline.py  test_m37_hierarchy_readiness.py  test_media_internal_decomposition.py  test_member_boundary_quality_audit.py  test_mixed_symbol_text_conflict_audit.py  test_ocr_patch.py  test_ownership_conservation.py  test_perception_benchmark.py  (+27 more)
services/backend-python/: pyproject.toml
services/pencil-asset-backend/: README.md  pyproject.toml
services/psdlike-text-style/: README.md  pyproject.toml
tools/html-first-ui-rebuilder/: pyproject.toml
(+1548 files in other folders)
