[project]
name = "image-figma-backend"
version = "0.1.0"
description = "FastAPI backend for the Image-to-Figma MVP deterministic PNG to DSL flow."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.0",
  "python-multipart>=0.0.20"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
