[project]
name = "pipeline-backend"
version = "0.1.0"
description = "OmniParser + VLM + OCR pipeline backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.20",
    "onnxruntime>=1.19.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
