[project]
name = "html-first-ui-rebuilder"
version = "0.1.0"
description = "Screenshot asset-sheet extraction and HTML-first UI reconstruction CLI."
requires-python = ">=3.11"
dependencies = [
  "Pillow>=10",
]

[project.optional-dependencies]
dev = []
browser = [
  "playwright>=1.45",
]

[project.scripts]
ui-rebuilder = "ui_rebuilder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

