[project]
name = "image-figma-backend"
version = "0.1.0"
description = "FastAPI backend for the Image-to-Figma MVP PNG to DSL and visual primitive flow."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "pydantic>=2.12.0",
  "python-multipart>=0.0.20",
  "openai>=2.37.0",
  "requests>=2.34.0",
  "pillow>=11.0.0",
  "numpy>=2.0.0",
  "scikit-image>=0.24.0",
  "orjson>=3.10.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "rich>=13.0.0",
]
perception-sam2 = [
    "numpy>=2.4.5",
    "sam2>=1.1.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
