[project]
name = "pencil-handoff-studio"
version = "0.1.0"
description = "Pencil handoff studio for UI image asset slicing and Pencil project export."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn>=0.38.0",
  "python-multipart>=0.0.20",
  "pillow>=11.0.0",
  "pydantic>=2.12.0",
  "requests>=2.34.0",
]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3.0"]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
